--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ github_username: ""
 instagram_username: ""
 paginate: 20
 paginate_path: "/page/:num/"
-timezone: "US/Pacific-New"
+timezone: "US/Indiana-Starke"
 site_id: "3928"
 gems: ["jekyll-paginate"]
 itunes_description: "Nerd, thinker, reader, feminist, and advocate for the Oxford comma. Soon-to-be MA student in Classical Archaeology. He/him."
